<resources>
    <string name="app_name">Shopping App</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="intro">The Right Adress\nFor Shopping\nAny Day</string>
    <string name="subTitle">It is very easy to find\nthe best quality among products\non the internet</string>
    <string name="start">Start</string>
    <string name="register">Register</string>
    <string name="login">Login</string>
    <string name="let_s_login">Let\'s Login</string>
    <string name="don_t_have_an_account_register">Don\'t have an account? <u>Register</u></string>
    <string name="do_you_have_an_account_login">Do you have an account? <u>Login</u></string>
    <string name="email">Email</string>
    <string name="pass_word">Password</string>
    <string name="forget_password"><u>Forget password?</u></string>
    <string name="google">Google</string>
    <string name="facebook">Facebook</string>
    <string name="let_s_register">Let\'s Register</string>
    <string name="cancel">Cancel</string>
    <string name="send">Send</string>
    <string name="send_to_your_email">We will sent you the password reset link to your email</string>
    <string name="reset_password">Reset Password</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="home">Home</string>
    <string name="search">Search</string>
    <string name="cart">Cart</string>
    <string name="profile">Profile</string>
    <string name="scan_to_search">Scan to search</string>
    <string name="search_by_voice">Search by voice</string>
    <string name="add_to_cart">Add to cart</string>
    <string name="best_deals">Best Deals</string>
    <string name="best_products">Best Products</string>
    <string name="colors">Color</string>
    <string name="images">Images</string>
    <string name="submit">SUBMIT</string>
    <string name="product_general_information">Product general information:</string>
    <string name="name">Name</string>
    <string name="category">Category</string>
    <string name="product_description_optional">Product description (Optional)</string>
    <string name="price">Price</string>
    <string name="offer_percentage_optional">Offer Percentage (Optional)</string>
    <string name="product_details">Product details:</string>
    <string name="product_details_hint">Sizes (Optional) | use , between each new size</string>
    <string name="number_of_images">Number of images: %1$s</string>
    <string name="price_format">$ %1$s</string>
    <string name="close">Close</string>
    <string name="size">Size</string>
    <string name="check_out">Check out</string>
    <string name="total">Total</string>
    <string name="your_shopping_cart_is_empty">Your shopping cart is empty</string>
    <string name="my_cart">My Cart</string>
    <string name="_150">$150</string>
    <string name="address">Address</string>
    <string name="delete">Delete</string>
    <string name="save">Save</string>
    <string name="address_location">Address location</string>
    <string name="city">City</string>
    <string name="full_name">Full Name</string>
    <string name="phone">Phone</string>
    <string name="street">Street</string>
    <string name="state">State</string>
    <string name="see_product">See product</string>
    <string name="forgot_change_password">Forgot/Change password</string>
    <string name="my_account">My account</string>
    <string name="all_orders">All orders</string>
    <string name="no_orders_to_show">No orders to show</string>
    <string name="chair">Chair</string>
    <string name="order_id">Order: #%1$s</string>
    <string name="address_detail">%1$s, %2$s, %3$s</string>
    <string name="settings">Settings</string>
    <string name="edit_personal_details">Edit personal details</string>
    <string name="orders">Orders</string>
    <string name="notifications">Notifications</string>
    <string name="billing">Billing</string>
    <string name="logout">Logout</string>
    <string name="add_product">Add product</string>
    <string name="view_details">view details</string>
</resources>