<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/_20sp"
    android:layout_marginHorizontal="@dimen/_10dp">

    <TextView
        android:id="@+id/tvTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/reset_password"
        android:textSize="@dimen/_20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvSubTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:text="@string/send_to_your_email"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvTitle" />

    <EditText
        android:id="@+id/etEmailReset"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_50dp"
        android:layout_marginTop="10dp"
        android:hint="@string/email"
        android:importantForAutofill="no"
        android:inputType="textEmailAddress"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvSubTitle" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etEmailReset">

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnSendReset"
            style="@style/blueButtonStyle"
            android:layout_width="0dp"
            android:layout_height="@dimen/_50dp"
            android:layout_marginTop="10dp"
            android:layout_weight="1"
            android:text="@string/send"
            android:textSize="@dimen/_20sp" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnCancelReset"
            style="@style/whiteButtonStyle"
            android:layout_width="0dp"
            android:layout_height="@dimen/_50dp"
            android:layout_marginTop="10dp"
            android:layout_marginStart="@dimen/_10dp"
            android:layout_weight="1"
            android:text="@string/cancel"
            android:textSize="@dimen/_20sp" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>