<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.login.RegisterFragment">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/blur_background"
        android:importantForAccessibility="no"
        android:scaleType="centerCrop" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/tvAppName"
            style="@style/h3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_80dp"
            android:drawablePadding="@dimen/_6dp"
            android:text="@string/app_name"
            android:textStyle="bold"
            app:drawableStartCompat="@drawable/ic_logo"
            app:layout_constraintStart_toStartOf="@id/guideline10"
            app:layout_constraintTop_toTopOf="parent" />


        <TextView
            android:id="@+id/tvLetRegister"
            style="@style/h4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/let_s_register"
            app:layout_constraintStart_toStartOf="@id/guideline10"
            app:layout_constraintTop_toBottomOf="@id/tvAppName" />

        <TextView
            android:id="@+id/tvSubTitle"
            style="@style/h2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/do_you_have_an_account_login"
            app:layout_constraintStart_toStartOf="@id/tvLetRegister"
            app:layout_constraintTop_toBottomOf="@id/tvLetRegister" />

        <EditText
            android:id="@+id/edtFirstName"
            style="@style/h2"
            android:layout_width="0dp"
            android:layout_height="@dimen/_50dp"
            android:layout_marginTop="@dimen/_20dp"
            android:hint="@string/first_name"
            android:importantForAutofill="no"
            android:inputType="text"
            app:layout_constraintEnd_toEndOf="@id/guideline90"
            app:layout_constraintStart_toStartOf="@id/guideline10"
            app:layout_constraintTop_toBottomOf="@id/tvSubTitle" />

        <EditText
            android:id="@+id/edtLastName"
            style="@style/h2"
            android:layout_width="0dp"
            android:layout_height="@dimen/_50dp"
            android:layout_marginTop="@dimen/_10dp"
            android:hint="@string/last_name"
            android:importantForAutofill="no"
            android:inputType="text"
            app:layout_constraintEnd_toEndOf="@id/guideline90"
            app:layout_constraintStart_toStartOf="@id/guideline10"
            app:layout_constraintTop_toBottomOf="@id/edtFirstName" />

        <EditText
            android:id="@+id/edtEmail"
            style="@style/h2"
            android:layout_width="0dp"
            android:layout_height="@dimen/_50dp"
            android:layout_marginTop="@dimen/_10dp"
            android:hint="@string/email"
            android:importantForAutofill="no"
            android:inputType="textEmailAddress"
            app:layout_constraintEnd_toEndOf="@id/guideline90"
            app:layout_constraintStart_toStartOf="@id/guideline10"
            app:layout_constraintTop_toBottomOf="@id/edtLastName" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tilPassword"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="@id/guideline90"
            app:layout_constraintStart_toStartOf="@id/guideline10"
            app:layout_constraintTop_toBottomOf="@id/edtEmail"
            app:passwordToggleEnabled="true">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edtPassword"
                style="@style/h2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/pass_word"
                android:inputType="textPassword" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.github.leandroborgesferreira.loadingbutton.customViews.CircularProgressButton
            android:id="@+id/btnRegister"
            style="@style/blueButtonStyle"
            android:layout_width="0dp"
            android:layout_height="55dp"
            android:layout_marginTop="@dimen/_20dp"
            android:text="@string/register"
            android:textSize="@dimen/h3TextSize"
            app:layout_constraintEnd_toEndOf="@id/guideline90"
            app:layout_constraintStart_toStartOf="@id/guideline10"
            app:layout_constraintTop_toBottomOf="@+id/tilPassword"
            app:spinning_bar_color="@color/white" />

        <TextView
            android:id="@+id/tvFbLogin"
            style="@style/h3"
            android:layout_width="160dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_20dp"
            android:background="@drawable/google_login"
            android:drawablePadding="@dimen/_6dp"
            android:gravity="center"
            android:padding="5dp"
            android:text="@string/facebook"
            android:textStyle="bold"
            app:drawableStartCompat="@drawable/ic_fb"
            app:layout_constraintStart_toStartOf="@id/guideline10"
            app:layout_constraintTop_toBottomOf="@id/btnRegister" />

        <TextView
            android:id="@+id/tvGgLogin"
            style="@style/h3"
            android:layout_width="@dimen/_150dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_20dp"
            android:background="@drawable/google_login"
            android:drawablePadding="@dimen/_6dp"
            android:gravity="center"
            android:padding="5dp"
            android:text="@string/google"
            android:textStyle="bold"
            app:drawableStartCompat="@drawable/ic_gg"
            app:layout_constraintEnd_toEndOf="@id/guideline90"
            app:layout_constraintTop_toBottomOf="@id/btnRegister" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline10"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.1" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline90"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.9" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</FrameLayout>