<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.admin.AddProductFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <ImageView
            android:id="@+id/imgClose"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:importantForAccessibility="no" android:src="@drawable/ic_close"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="@dimen/_10dp"
            android:layout_marginEnd="@dimen/_10dp"/>

        <androidx.appcompat.widget.LinearLayoutCompat
            android:id="@+id/productsInfo"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="10dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="10dp"
            android:orientation="vertical"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/product_general_information"
                android:textColor="@color/black"
                android:textSize="18sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/edName"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_marginTop="10dp"
                android:hint="@string/name"
                android:importantForAutofill="no"
                android:inputType="text"
                android:textColorHint="@color/black" />


            <EditText
                android:id="@+id/edCategory"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_marginVertical="@dimen/_6dp"
                android:hint="@string/category"
                android:importantForAutofill="no"
                android:inputType="text"
                android:textColorHint="@color/black" />

            <EditText
                android:id="@+id/edDescription"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:hint="@string/product_description_optional"
                android:importantForAutofill="no"
                android:inputType="text"
                android:textColorHint="@color/black" />

            <EditText
                android:id="@+id/edPrice"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_marginVertical="@dimen/_6dp"
                android:hint="@string/price"
                android:importantForAutofill="no"
                android:inputType="numberDecimal"
                android:textColorHint="@color/black" />

            <EditText
                android:id="@+id/edOfferPercentage"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:hint="@string/offer_percentage_optional"
                android:importantForAutofill="no"
                android:inputType="number"
                android:textColorHint="@color/black" />

        </androidx.appcompat.widget.LinearLayoutCompat>


        <LinearLayout
            android:id="@+id/layoutDetails"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:orientation="vertical"
            app:layout_constraintEnd_toEndOf="@id/productsInfo"
            app:layout_constraintStart_toStartOf="@id/productsInfo"
            app:layout_constraintTop_toBottomOf="@id/productsInfo">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/product_details"
                android:textColor="@color/black"
                android:textSize="18sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/edSizes"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:hint="@string/product_details_hint"
                android:importantForAutofill="no"
                android:inputType="text"
                android:textColorHint="@color/black" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginVertical="@dimen/_20dp"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/tvColorPicker"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_10dp"
                    android:drawablePadding="10dp"
                    android:padding="@dimen/_10dp"
                    android:text="@string/colors"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    app:drawableStartCompat="@drawable/ic_color_lens" />

                <TextView
                    android:id="@+id/tvColors"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:paddingHorizontal="@dimen/_10dp"
                    android:textSize="14sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/tvImagesPicker"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_10dp"
                    android:drawablePadding="10dp"
                    android:padding="@dimen/_10dp"
                    android:text="@string/images"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    app:drawableStartCompat="@drawable/baseline_image_24" />

                <TextView
                    android:id="@+id/tvNumberImages"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:paddingHorizontal="@dimen/_10dp"
                    android:textSize="14sp" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/layoutBottom"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_20dp"
                android:gravity="center_horizontal"
                android:orientation="horizontal"
                android:paddingVertical="@dimen/_6dp">

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/btnSubmit"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/blue_background"
                    android:paddingHorizontal="@dimen/_20dp"
                    android:paddingVertical="@dimen/_10dp"
                    android:text="@string/submit"
                    android:textColor="@color/white"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/btnCancel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_20dp"
                    android:background="@drawable/white_background"
                    android:paddingHorizontal="@dimen/_20dp"
                    android:paddingVertical="@dimen/_10dp"
                    android:text="@string/cancel"
                    android:textColor="@color/black"
                    android:textSize="18sp"
                    android:textStyle="bold" />
            </LinearLayout>

        </LinearLayout>

        <ProgressBar
            android:id="@+id/progressbar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_10dp"
            android:visibility="invisible"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/layoutDetails" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.core.widget.NestedScrollView>